--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <html>
     <head>
-        <title>JSP Test Page</title>
+        <title>Source Test Page</title>
     </head>
     <body>
-        My favorite color is: <%= "blue "%>
+        This is a place
     </body>
 </html>
