--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Source Test Page</title>
     </head>
     <body>
-        This is a place
+        Congrats! You found my test website.
     </body>
 </html>
