--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 
 <html>
     <head>
-        <title>Source Test Page</title>
+        <title>Home Page</title>
     </head>
     <body>
         Congrats! You found my test website.
+        PM me on GitHub for a suprise.
     </body>
 </html>
