--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         Congrats! You found my test website.
+    </body>
+    
+    <body>
         PM me on GitHub for a suprise.
     </body>
 </html>
